# Syneto_Api

syneto-lab-dark-side-Mihai/: Dockerfile  testing.py
syneto-lab-dark-side-Mihai/laborator/: README.md
syneto-lab-dark-side-Mihai/laborator/homework/: py_hw_3.txt  python_hw_1.py  python_hw_2.py  python_hw_3.py  python_hw_4.py
syneto-lab-dark-side-Mihai/laborator/python_turial/: abstract.py  composition.py  decorator_examples.py  example.json  exemplu2.txt  files.py  jason.py  lab4.json  mydecorators.py
syneto-lab-dark-side-Mihai/laborator/src/: call_apis.py  config.json  main1.py  pyproject.toml  users.json
syneto-lab-dark-side-Mihai/laborator/src/api/: cocktails.py  finance.py  users_api.py
syneto-lab-dark-side-Mihai/laborator/src/db/: users_db.py  users_db_json.py
syneto-lab-dark-side-Mihai/laborator/src/domain/: user_repo.py  users_domain.py
syneto-lab-dark-side-Mihai/src/: config.json  main.py
syneto-lab-dark-side-Mihai/src/api/: users_api.py
syneto-lab-dark-side-Mihai/src/db/: users_db.py
syneto-lab-dark-side-Mihai/src/domain/: user_repo.py  users_domain.py
