[tool.poetry]
name = "syneto-lab-dark-side"
version = "0.1.0"
description = ""
authors = ["LigaAC Labs Dark SIde"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.3.0"
uvicorn = "^0.21.1"
fastapi = "^0.95.0"
plotly = "^5.15.0"
yfinance = "^0.2.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"